--- a/src/app/homepage/home/home.component.scss
+++ b/src/app/homepage/home/home.component.scss
@@ -31,18 +31,17 @@
 }
 
 .header ul{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
     justify-content: right;
     margin: 0;
     list-style-type: none;
+    float: right;
 }
 
 .header ul li{
+    display: inline;
     text-decoration: underline;
     font: normal normal 600 1.31em/1.75em;
-    color: #465F5C;;
+    color: #465F5C;
     margin-top: 1.5em;
     margin-right: 2em;
     font-family: 'Open Sans', 'arial', sans-serif;
@@ -57,8 +56,8 @@
     line-height: 2.188em;
     font-size: 1.750em;
     width: 288px;
+    border: none;
 }
-
 
 .bloco-1 {
     margin-top: 8em;
@@ -75,8 +74,6 @@
     color: #465F5C;
     text-align: left;
     font: oblique normal normal 1.875em/2.375em Futura PT;
-    //font-size: 1.875em;
-    //line-height: 2.375em;
     font-family: 'FuturaPT', 'arial', sans-serif;
 }
 
@@ -86,7 +83,6 @@
     font: normal normal medium;
     font-size: 7.5em;
     line-height: 1em;
-   // text-align: left;
     font-family: 'FuturaPT', 'arial', sans-serif;
 }
 
