finalizando home-page

--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -18,11 +18,32 @@
 			<span class="small-text">uma jornada pelo seu bem-estar</span>
 			<span class="big-text"> produtos artesanais direto da natureza</span>
 			<button class="btn-home btn-2" routerLink="/form/question">Iniciar Jornada</button>
+			<div>
+				<button class="btn-saiba-mais">Saiba mais</button>
+			</div>
 		</div>
 		<div class="bloco-2">
-			<!-- <img src="assets/img/perfumes.png"> -->
+			<img src="assets/img/perfumes.png">
 		</div>
 	</div>
+
+	<div class="bloco-3">
+		<div>
+			<!-- <img class="img-aspiracao-fundo" src="assets/img/aspiracao-fundo.svg">
+		<img class="img-linhas-vermelhas" src="assets/img/linhas-vermelhas.svg">-->
+			<img class="img-aspiracao-verde" src="assets/img/aspiracao-verde.svg">
+		</div>
+		<div class="text-branco">
+			<span >conheça o projeto</span>
+			<p> O Aspiração traz uma experiência em aromaterapia desenvolvida exclusivamente para você!<br>
+				E como fazemos isso? Baseados em estudos realizados sobre a aromaterapia, foi desenvolvido um 
+				banco de dados contendo as principais respostas para cada tipo de terapia, no qual pode se recomendar
+				 um aromático terapêutico que auxiliará a pessoa em questão.
+		</p>
+		</div>
+	</div>
+
+
 	<div class="footer">
 		<div>
 			<img class="img-aspiracao" src="assets/img/aspiracao-branco.svg">
