--- a/src/app/homepage/result/result.component.scss
+++ b/src/app/homepage/result/result.component.scss
@@ -41,9 +41,11 @@
     margin-bottom: 7.750em;;
     width: 71.875em;
     background-color: #465F5C;
-    position: fixed;
     border-radius: 1.875em;
     padding: 3em;
+    overflow-y: auto;
+    position: relative;
+    //overflow: scroll;
 }
 
 .header {
@@ -132,7 +134,8 @@
 
 .align-img {
     align-items: center;
-    display: inline;
+    display: inline-flex;
+    margin-top: 1em;
 }
 
 .img-pod {
@@ -140,4 +143,18 @@
     border-radius: 1em;
     height: 26.813em;
     width: 20.938em;
+}
+
+
+.img-margin {
+    margin-right: 1em;
+    margin-left: 1em;
+}
+
+.text-email {
+    color: white;
+    font-size: 1.313em;
+    font-family: 'Open Sans';
+    text-align: left;
+    font-weight: 2em;
 }
