--- a/src/app/homepage/result/result.component.scss
+++ b/src/app/homepage/result/result.component.scss
@@ -20,7 +20,6 @@
     position: fixed; 
 }
 
-
 .img-as {
     position: fixed;
     height: 100%;
@@ -78,17 +77,12 @@
 }
 
 .header button{
-    //font-family: 'FuturaPT', 'arial', sans-serif;
     font: normal normal medium 1.75em/35px 'FuturaPT';
-    border: 2px solid #465F5C;
-    padding: 1.250em 2.625em;
+    border: none;
+    padding:20px 42px;
     background-color: white;
     color: #465F5C;
     font-size: 1.75em;
-}
-
-.c2 {
-    margin-top: 3em;
 }
 
 .titulo {
@@ -145,7 +139,6 @@
     width: 20.938em;
 }
 
-
 .img-margin {
     margin-right: 1em;
     margin-left: 1em;
@@ -157,4 +150,45 @@
     font-family: 'Open Sans';
     text-align: left;
     font-weight: 2em;
+    margin-top: 1em;
+    font-weight: 2em;
+    letter-spacing: normal;
+}
+
+.c5 {
+    height: 4.188em;
+    margin-top: 1.500em;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5.625em;
+}
+
+.c5 input{
+    border-color: #F8F7F5;
+    border-width: 1px;
+    padding-left: 1em;
+    outline: none;
+    background-color: transparent;
+    font-size: 1.750em;
+    font-family: 'FuturaPT', 'arial', sans-serif;
+    letter-spacing: 0px;
+    color: #F8F7F5;
+    width: 47.750em;
+    border-radius: 0.5em 0 0 0.5em;
+}
+
+.c5 button {
+    width: 16.250em;
+    background-color: #F8F7F5;
+    font-size: 1.750em;
+    color: #465F5C;
+    font-family: 'FuturaPT', 'arial', sans-serif;
+    border-radius: 0 0.5em 0.5em 0;
+    border: none;
+}
+
+.divider {
+    background-color: white;
+    margin-bottom: 3em;
+    margin-top: 3em;
 }
