--- a/src/app/homepage/question/question.component.html
+++ b/src/app/homepage/question/question.component.html
@@ -4,66 +4,64 @@
   <img class="img-folha" src="assets/img/FolhaCortada.svg">
   <img class="img-as" src="assets/img/AScortado.svg">
 
-  <div fxLayout="column" class="format-group ">
+  <div fxLayout="column" class="format-group">
 
-    <span class="q1" *ngIf=" 1 >= question">Com que frequência você</span>
-    <span class="q2" *ngIf=" 1 >= question">Sentido insonia e fadiga??</span>
+    <span class="q1" *ngIf="1 >= question">Pessoa, você tem tido</span>
+    <span class="q2" *ngIf="1 >= question">Dores de cabeça por tensão?</span>
 
-    <span class="q1" *ngIf="question === 2">Pessoa, você tem sentindo que</span>
-    <span class="q2" *ngIf="question === 2">Não gosta das mesmas coisas que antes?</span>
+    <span class="q1" *ngIf="question === 2">Com que frequência você</span>
+    <span class="q2" *ngIf="question === 2">Sentido insonia e fadiga??</span>
 
-    <span class="q1" *ngIf="question === 3">Pessoa, você anda tendo </span>
-    <span class="q2" *ngIf="question === 3">Dificuldade para relaxar?</span>
+    <span class="q1" *ngIf="question === 3">Ultimamente, voce tem tido</span>
+    <span class="q2" *ngIf="question === 3">Preocupações excessivas?</span>
 
-    <span class="q1" *ngIf="question === 4">Com que frequência tem sentido</span>
-    <span class="q2" *ngIf="question === 4">Dor nos músculos do ombro e pescoço?</span>
+    <span class="q1" *ngIf="question === 4">Marlon, com que frequência você tem</span>
+    <span class="q2" *ngIf="question === 4">Sentido perda de apetite?</span>
 
-    <span class="q1" *ngIf="question === 5">Pessoa, você tem tido</span>
-    <span class="q2" *ngIf="question === 5">Dores de cabeça por tensão?</span>
+    <span class="q1" *ngIf="question === 5">Voce tem ficado com</span>
+    <span class="q2" *ngIf="question === 5">Mãos e pés frios e suados?</span>
 
-    <span class="q1" *ngIf="question === 6">Ultimamente você tem achado que</span>
-    <span class="q2" *ngIf="question === 6">Não consegue se divertir e dar risadas?</span>
+    <span class="q1" *ngIf="question === 6">Pessoa, você tem sentindo que</span>
+    <span class="q2" *ngIf="question === 6">Não gosta das mesmas coisas que antes?</span>
 
-    <span class="q1" *ngIf="question === 7">Com que frequência você tem</span>
-    <span class="q2" *ngIf="question === 7">tem sentido nervosismo?</span>
+    <span class="q1" *ngIf="question === 7">Ultimamente você tem achado que</span>
+    <span class="q2" *ngIf="question === 7">Não consegue se divertir e dar risadas?</span>
 
-    <span class="q1" *ngIf="question === 8">Ultimamente voce anda</span>
-    <span class="q2" *ngIf="question === 8">Se sentindo muito cansado?</span>
+    <span class="q1" *ngIf="question === 8">Marlon, você tem sentido que</span>
+    <span class="q2" *ngIf="question === 8">Não se sente alegre a maior parte do tempo? </span>
 
-    <span class="q1" *ngIf="question === 9">Ultimamente, voce tem tido</span>
-    <span class="q2" *ngIf="question === 9">Preocupações excessivas?</span>
+    <span class="q1" *ngIf="question === 9">Ultimamente tem achado que</span>
+    <span class="q2" *ngIf="question === 9">Perdeu o interesse de cuidar da aparência?</span>
 
-    <span class="q1" *ngIf="question === 10">Marlon, você tem sentido que</span>
-    <span class="q2" *ngIf="question === 10">Não se sente alegre a maior parte do tempo? </span>
+    <span class="q1" *ngIf="question === 10">Você tem conseguido sentir prazer ao </span>
+    <span class="q2" *ngIf="question === 10">Assistir tv, ouvir rádio ou ler?</span>
 
-    <span class="q1" *ngIf="question === 11">Marlon, você tem sentido que</span>
-    <span class="q2" *ngIf="question === 11">Dificuldade para respirar?</span>
+    <span class="q1" *ngIf="question === 11">Pessoa, você anda tendo </span>
+    <span class="q2" *ngIf="question === 11">Dificuldade para relaxar?</span>
 
-    <span class="q1" *ngIf="question === 12">Na sua percepção, voce tem tido</span>
-    <span class="q2" *ngIf="question === 12">Dificuldade de concentração?</span>
+    <span class="q1" *ngIf="question === 12">Com que frequência você tem</span>
+    <span class="q2" *ngIf="question === 12">tem sentido nervosismo?</span>
 
-    <span class="q1" *ngIf="question === 13">Marlon, com que frequência você tem</span>
-    <span class="q2" *ngIf="question === 13">Sentido perda de apetite?</span>
+    <span class="q1" *ngIf="question === 13">Marlon, você tem sentido que</span>
+    <span class="q2" *ngIf="question === 13">Dificuldade para respirar?</span>
+    
+    <span class="q1" *ngIf="question === 14">Anda sentindo medo que</span>
+    <span class="q2" *ngIf="question === 14">Algo de ruim aconteça?</span>
 
-    <span class="q1" *ngIf="question === 14">Ultimamente tem achado que</span>
-    <span class="q2" *ngIf="question === 14">Perdeu o interesse de cuidar da aparência?</span>
+    <span class="q1" *ngIf="question === 15">Você tem sentido seu</span>
+    <span class="q2" *ngIf="question === 15">Coração bater de forma estranha?</span>
 
-    <span class="q1" *ngIf="question === 15">Anda sentindo medo que</span>
-    <span class="q2" *ngIf="question === 15">Algo de ruim aconteça?</span>
+    <span class="q1" *ngIf="question === 16">Com que frequência tem sentido</span>
+    <span class="q2" *ngIf="question === 16">Dor nos músculos do ombro e pescoço?</span>
+    
+    <span class="q1" *ngIf="question === 17">Ultimamente voce anda</span>
+    <span class="q2" *ngIf="question === 17">Se sentindo muito cansado?</span>
 
+    <span class="q1" *ngIf="question === 18">Na sua percepção, voce tem tido</span>
+    <span class="q2" *ngIf="question === 18">Dificuldade de concentração?</span>
 
-    <span class="q1" *ngIf="question === 16">Marlon, você tem sentido</span>
-    <span class="q2" *ngIf="question === 16">Muito sono durante o dia?</span>
-
-    <span class="q1" *ngIf="question === 17">Voce tem ficado com</span>
-    <span class="q2" *ngIf="question === 17">Mãos e pés frios e suados?</span>
-
-    <span class="q1" *ngIf="question === 18">Você tem conseguido sentir prazer ao </span>
-    <span class="q2" *ngIf="question === 18">Assistir tv, ouvir rádio ou ler?</span>
-
-
-    <span class="q1" *ngIf="question === 19">Você tem sentido seu</span>
-    <span class="q2" *ngIf="question === 19">Coração bater de forma estranha?</span>
+    <span class="q1" *ngIf="question === 19">Marlon, você tem sentido</span>
+    <span class="q2" *ngIf="question === 19">Muito sono durante o dia?</span>
 
     <span class="q1" *ngIf="question === 20">Marlon, ultimamente as coisas andam te causando</span>
     <span class="q2" *ngIf="question === 20">Muita irritação?</span>
