--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -8,7 +8,7 @@
 				<li>sobre</li>
 				<li>cromoterápicos</li>
 				<li>contato</li>
-				<button class="btn-home" routerLink="/form/question"> Iniciar Jornada</button>
+				<button class="btn-home" routerLink="/form"> Iniciar Jornada</button>
 			</ul>
 		</nav>
 	</header>
@@ -17,7 +17,7 @@
 		<div class="bloco-1">
 			<span class="small-text">uma jornada pelo seu bem-estar</span>
 			<span class="big-text"> produtos artesanais direto da natureza</span>
-			<button class="btn-home btn-2" routerLink="/form/question">Iniciar Jornada</button>
+			<button class="btn-home btn-2" routerLink="/form">Iniciar Jornada</button>
 			<div>
 				<button class="btn-saiba-mais">Saiba mais</button>
 			</div>
