--- a/src/app/homepage/question/question.component.html
+++ b/src/app/homepage/question/question.component.html
@@ -6,7 +6,7 @@
 
   <div fxLayout="column" class="format-group">
 
-    <span class="q1" *ngIf="1 >= question">Pessoa, você tem tido</span>
+    <span class="q1" *ngIf="1 >= question">{{ nome }}, você tem tido</span>
     <span class="q2" *ngIf="1 >= question">Dores de cabeça por tensão?</span>
 
     <span class="q1" *ngIf="question === 2">Com que frequência você</span>
@@ -15,19 +15,19 @@
     <span class="q1" *ngIf="question === 3">Ultimamente, voce tem tido</span>
     <span class="q2" *ngIf="question === 3">Preocupações excessivas?</span>
 
-    <span class="q1" *ngIf="question === 4">Marlon, com que frequência você tem</span>
+    <span class="q1" *ngIf="question === 4">{{ nome }}, com que frequência você tem</span>
     <span class="q2" *ngIf="question === 4">Sentido perda de apetite?</span>
 
     <span class="q1" *ngIf="question === 5">Voce tem ficado com</span>
     <span class="q2" *ngIf="question === 5">Mãos e pés frios e suados?</span>
 
-    <span class="q1" *ngIf="question === 6">Pessoa, você tem sentindo que</span>
+    <span class="q1" *ngIf="question === 6">{{ nome }}, você tem sentindo que</span>
     <span class="q2" *ngIf="question === 6">Não gosta das mesmas coisas que antes?</span>
 
     <span class="q1" *ngIf="question === 7">Ultimamente você tem achado que</span>
     <span class="q2" *ngIf="question === 7">Não consegue se divertir e dar risadas?</span>
 
-    <span class="q1" *ngIf="question === 8">Marlon, você tem sentido que</span>
+    <span class="q1" *ngIf="question === 8">{{ nome }}, você tem sentido que</span>
     <span class="q2" *ngIf="question === 8">Não se sente alegre a maior parte do tempo? </span>
 
     <span class="q1" *ngIf="question === 9">Ultimamente tem achado que</span>
@@ -36,13 +36,13 @@
     <span class="q1" *ngIf="question === 10">Você tem conseguido sentir prazer ao </span>
     <span class="q2" *ngIf="question === 10">Assistir tv, ouvir rádio ou ler?</span>
 
-    <span class="q1" *ngIf="question === 11">Pessoa, você anda tendo </span>
+    <span class="q1" *ngIf="question === 11">{{ nome }}, você anda tendo </span>
     <span class="q2" *ngIf="question === 11">Dificuldade para relaxar?</span>
 
     <span class="q1" *ngIf="question === 12">Com que frequência você tem</span>
     <span class="q2" *ngIf="question === 12">tem sentido nervosismo?</span>
 
-    <span class="q1" *ngIf="question === 13">Marlon, você tem sentido que</span>
+    <span class="q1" *ngIf="question === 13">{{ nome }}, você tem sentido que</span>
     <span class="q2" *ngIf="question === 13">Dificuldade para respirar?</span>
     
     <span class="q1" *ngIf="question === 14">Anda sentindo medo que</span>
@@ -60,10 +60,10 @@
     <span class="q1" *ngIf="question === 18">Na sua percepção, voce tem tido</span>
     <span class="q2" *ngIf="question === 18">Dificuldade de concentração?</span>
 
-    <span class="q1" *ngIf="question === 19">Marlon, você tem sentido</span>
+    <span class="q1" *ngIf="question === 19">{{ nome }}, você tem sentido</span>
     <span class="q2" *ngIf="question === 19">Muito sono durante o dia?</span>
 
-    <span class="q1" *ngIf="question === 20">Marlon, ultimamente as coisas andam te causando</span>
+    <span class="q1" *ngIf="question === 20">{{ nome }}, ultimamente as coisas andam te causando</span>
     <span class="q2" *ngIf="question === 20">Muita irritação?</span>
 
     <div>
@@ -88,4 +88,4 @@
 </div>
 
 <app-result *ngIf="question == 21" [result]="result" [xQuestionAir]="xQuestionAir" [xQuestionFire]="xQuestionFire"
-  [xQuestionEarth]="xQuestionEarth" [xQuestionWater]="xQuestionWater"></app-result>
+  [xQuestionEarth]="xQuestionEarth" [xQuestionWater]="xQuestionWater" [nome]="nome"></app-result>
