--- a/src/app/homepage/result/result.component.html
+++ b/src/app/homepage/result/result.component.html
@@ -8,7 +8,7 @@
             <div class="container-result" fxLayout="column">
                 <div class="header">
                     <div class="header-1">
-                        <span class="small-text">Pessoa, você precisa da</span>
+                        <span class="small-text">{{nome}}, você precisa da</span>
 
                         <button>Receber no e-mail</button>
                     </div>
@@ -19,14 +19,11 @@
 
                 <div class="c2">
                     <span class="titulo">O que esta desalinhado?</span>
-                    <div class="text-size" fxLayout="column">
+                    <div class="text-size text-size-hidden" #sizeDiv fxLayout="column">
                         <div class="text">
                             <p>Insegurança, medo, solidão e instabilidade</p>
                             <p>Sua jornada, neste momento emocional, apontou que seu elemento predominante é TERRA.</p>
-                            <p> Integrar cabeça, coração e colocar as mãos na massa.
-                                É sair do mundo das ideias e partir para a prática, fazer-se acontecer. Comprometimento.
-                                Deixar o sentimento e motivação emergir e
-                            </p>
+                            <p class="hidden-text" #campoTexto> {{ textTerra }} </p>
                             <button class="btn-ler-mais" (click)="expand()">
                                 Ler mais
                                 <mat-icon>arrow_right_alt</mat-icon>
