--- a/src/app/homepage/result/result.component.html
+++ b/src/app/homepage/result/result.component.html
@@ -19,11 +19,11 @@
 
                 <div class="c2">
                     <span class="titulo">O que esta desalinhado?</span>
-                    <div class="text-size text-size-hidden" #sizeDiv fxLayout="column">
+                    <div class="text-size text-size-hidden" id="sizeDiv" fxLayout="column">
                         <div class="text">
                             <p>Insegurança, medo, solidão e instabilidade</p>
                             <p>Sua jornada, neste momento emocional, apontou que seu elemento predominante é TERRA.</p>
-                            <p class="hidden-text" #campoTexto> {{ textTerra }} </p>
+                            <p class="hidden-text" id="campoTexto"> {{ textTerra }} </p>
                             <button class="btn-ler-mais" (click)="expand()">
                                 Ler mais
                                 <mat-icon>arrow_right_alt</mat-icon>
